--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: scala
+jdk:
+  - oraclejdk8
 scala:
   - 2.12.2
+sudo: false
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
